--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <div class="row align-items-middle align-middle">
                 <div class="col-md-12">
                         <p>"Tunnel Vision" is created by <a href="https://wmcda.de">Wilson McDade</a> to highlight the tunnels in RIT's residence halls.</p>
-                        <p>Special Thanks to Erin Monahan and Beckett Jensen for helping to make this project possible.</p>
+                        <p>Special Thanks to Erin Monahan and Beckett Jenen for helping to make this project possible.</p>
                 </div>
         </div>
     </div>
