Added tag system

--- a/templates/mural.html
+++ b/templates/mural.html
@@ -84,6 +84,13 @@
             <p><a href="/year/{{ muralDetails['year'] }}">{% if muralDetails["year"] != 0 %}{{ muralDetails["year"] }}{% else %}Unknown{% endif %}</a></p>
             <h3>Location:</h3>
             <p>{{ muralDetails["location"] }} </p>
+
+            {% if tags|length > 0 %}
+            <h3>Tags:</h3>
+            {% for tag in tags: %}
+            <a href="/tags?t={{ tag }}"><p class="chip">{{ tag }}</p></a>
+            {% endfor %}
+            {% endif %}
             
             {% if muralDetails["artists"]|length > 0: %}
             <h3>Painters:</h3>
