--- a/templates/header.html
+++ b/templates/header.html
@@ -48,6 +48,16 @@
             .navbar-collapse {
                 flex-grow: 0 !important;
             }
+            
+            .chip {
+                display: inline-block;
+                padding: 0 25px;
+                height: 50px;
+                font-size: 16px;
+                line-height: 50px;
+                border-radius: 25px;
+                background-color: #f1f1f1;
+            }
 
             .navbar-brand {
                 font-size: 1.5rem;
