Refactoring, adding documentation, code cleanup

--- a/templates/header.html
+++ b/templates/header.html
@@ -117,7 +117,7 @@
                         <img src="https://assets.csh.rit.edu/pubsite/csh_logo_square.svg"  style="width: 30px;">
                     </a>
                     <a class="nav-link" href="https://github.com/wilsonmcdade/tunnelvision" target="_blank">
-                        <img src="/static/images/github.svg" style="width: 30px; filter: invert(1);">
+                        <img alt="Git: {{ config['GIT_REVISION'] }}" src="/static/images/github.svg" style="width: 30px; filter: invert(1);">
                     </a>
                 </div>
             </div>
