Update references to thumbnail

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -66,7 +66,7 @@
                 <div class="card" style="width: 15rem">
                     <div class="col">
                         <a style="text-decoration: none;" href="/edit/{{ mural['id'] }}">
-                        <img class="card-img-top"  src="{{ mural['primaryimage'] }}">
+                        <img class="card-img-top"  src="{{ mural['thumbnail'] }}">
                         <div class="card-body">
                             <p>{{ mural['title'] }}</p>
                             <p>({{ mural['year'] }})</p>
