--- a/templates/paginated.html
+++ b/templates/paginated.html
@@ -7,7 +7,7 @@
 {% endif %}>
     <div>
         <a style="text-decoration: none;" href="/murals/{{ mural['id'] }}">
-        <img class="card-img-top" src="{{ mural['primaryimage'] }}">
+        <img class="card-img-top" src="{{ mural['thumbnail'] }}">
         <div class="card-body">
             <p>{{ mural['title'] }}</p>
             <p>({% if mural["year"] != 0 %}{{ mural["year"] }}{% else %}Unknown{% endif %})</p>
