Added spotify embed on select murals

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,4 +1,7 @@
 {% extends "header.html" %}
+{% block title %}
+Catalog - Tunnel Vision
+{% endblock %}
 {% block dynamic_content %}
 
 <div class="container text-center">
