--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "header.html" %} 
+{% block title %}
+About - Tunnel Vision
+{% endblock %}
 {% block dynamic_content %}
 
 <div class="container text-center">
