--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tunnel Vision</title>
+        <title>{% block title %}Tunnel Vision{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
         <meta property="og:title" content="Tunnel Vision" />
