Added some references to the TV email and changed TV branding to 'Tunnelvision' instead of 'Tunnel Vision'.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %} 
 {% block title %}
-About - Tunnel Vision
+About - TunnelVision
 {% endblock %}
 {% block dynamic_content %}
 
@@ -14,8 +14,9 @@ About - Tunnel Vision
                     <img class="img-fluid" alt="Construction photos of the RIT residence halls, circa 1966. Some tunnels are exposed as they are being built." src="{{ url_for('static', filename='images/aerial_construction.png') }}">
                 </div>
                 <div class="col-md-6 align-left">
-                    <p>"Tunnel Vision" is created by <a href="https://wmcda.de">Wilson McDade</a> with help from <a href="https://www.linkedin.com/in/kasimomeally/">Kasim O'Meally</a> to highlight the tunnels in RIT's residence halls.</p>
+                    <p>"TunnelVision" is created by <a href="https://wmcda.de">Wilson McDade</a> with help from <a href="https://www.linkedin.com/in/kasimomeally/">Kasim O'Meally</a> to highlight the tunnels in RIT's residence halls.</p>
                     <p>Special Thanks to Jessica Lieberman, Erin Monahan, and Beckett Jenen for helping to make this project possible.</p>
+                    <p>Do you have a suggestion? Reach out to us at <a href="mailto:tunnelvision@csh.rit.edu">tunnelvision@csh.rit.edu</a></p>
                 </div>
                 <div class="col-md-6 pt-4">
                     <h2>About the Tunnels</h2>
