--- a/templates/header.html
+++ b/templates/header.html
@@ -21,10 +21,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}Tunnel Vision{% endblock %}</title>
+        <title>{% block title %}TunnelVision{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
-        <meta property="og:title" content="Tunnel Vision" />
+        <meta property="og:title" content="TunnelVision" />
         <meta property="og:description" content="Tunnelvision is an exhibition of RIT's residence hall murals." />
         <style>
             body {
@@ -93,7 +93,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    Tunnel <span style="color: rgb(247, 105, 2);">Vision</span>
+                    Tunnel<span style="color: rgb(247, 105, 2);">Vision</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -113,6 +113,11 @@
                     </ul>
                 </div>
                 <div class="d-flex gap-3">
+                    <a data-bs-toggle="tooltip" data-bs-placement="center" data-bs-html="true" title="Have a submission or suggestion? Reach out to us! tunnelvision@csh.rit.edu">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-question-circle-fill" viewBox="0 0 16 16">
+                            <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm8.93 4.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                        </svg>                        </svg>
+                    </a>
                     <a class="nav-link" href="https://csh.rit.edu/" target="_blank">
                         <img src="https://assets.csh.rit.edu/pubsite/csh_logo_square.svg"  style="width: 30px;">
                     </a>
