Update TAG reference to Tunnel visionaries

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,9 +40,9 @@ About - TunnelVision
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h2>About the Tunnel Art Group (TAG)</h2>
+                    <h2>About the Tunnel Visionaries</h2>
                     <div class="text-start">
-                        <p>The <i>Tunnelvision</i> project has now evolved into more than just a website; Wilson and Kasim have started a club, the Tunnel Art Group (TAG), with the goal of telling the story of the murals, helping to maintain the murals, and helping new students appreciate the art in the tunnels.</p>
+                        <p>The <i>Tunnelvision</i> project has now evolved into more than just a website; Wilson and Kasim have started a club, the Tunnel Visionaries, with the goal of telling the story of the murals, helping to maintain the murals, and helping new students appreciate the art in the tunnels. For more info on the club, reach out to <a href="mailto:tunnelvision@csh.rit.edu">tunnelvision@csh.rit.edu</a>!</p>
                     </div>
                 </div>
                 <div class="col-md-6">
