--- a/templates/mural.html
+++ b/templates/mural.html
@@ -93,6 +93,24 @@
             {% endif %}
             <h3>Location:</h3>
             <p>{{ muralDetails["location"] }} </p>
+            {% if muralDetails["remarks"] != None %}
+            <div class="accordion" id="remarkdropdown">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="remarkheading">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#remarkcollapse" aria-controls="remarkcollapse">
+                        Remarks
+                        </button>
+                    </h2>
+                    <div id="remarkcollapse" class="accordion-collapse collapse" aria-labelledby="remarkheading" data-bs-parent="#remarkdropdown">
+                        <div class="accordion-body">
+                            <div class="container">
+                                <p>{{ muralDetails['remarks'] }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
 
             {% if tags|length > 0 %}
             <h3>Tags:</h3>
@@ -113,7 +131,7 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-controls="collapseOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-controls="collapseOne">
                     Suggestion?
                     </button>
                 </h2>
