Finished thumbnail logic, added private notes field as well

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -95,6 +95,11 @@
                     <label for="location" class="form-label">Location</label>
                     <input value="{{ muralDetails['location'] }}" type="text" class="form-control" id="location" name="location" required>
                 </div>
+                <h1>Private Information</h1>
+                <div class="mb-3">
+                    <label for="location" class="form-label">Private Notes</label>
+                    <input value="{{ muralDetails['private_notes'] }}" type="text" class="form-control" id="private_notes" name="private_notes" required>
+                </div>
                 <button type="submit" class="btn btn-primary">Edit Details</button>
             </form>
             
